--- a/modulo B/aula07/exe02.html
+++ b/modulo B/aula07/exe02.html
@@ -48,6 +48,21 @@
         var estadp = "sao paulo" 
         resul = estado == 'RJ' || estafo == "sao paulo"
         console.log(resul)
+
+        // Operador Ternário //
+
+        var media = 9
+        resulmedia = media > 7? 'APROVADO' : 'REPROVADO'
+        console.log(resulmedia)
+
+        var x = 8
+        var resultad = x % 2 == 0 ? 5 : 9
+        console.log(resultad)
+
+        var idad = 25
+        r = idad >= 18 ? 'MAIOR' : 'MENOR'
+        console.log(r)
+
     </script>
 </body>
 </html>
